# tentcent-translate-api-cpp-demo

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
scripts/: lcompile.ps1  llaunch.ps1
src/: main.cpp
